fixed bugs introduced by new dom structure

--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -172,7 +172,7 @@
   display: none;
   @media(max-width: 600px) {
     display: block;
-    margin: 20px;
+    margin: 20px 0;
     width: auto!important;
   }
 }
