--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -10,18 +10,12 @@ nav {
 	margin-bottom: 1px;
 }
 
-	section {
+	.post-footer {
 		width: 100%;
 		max-width: 100%;
 		@media(max-width: 800px) {
 			width: 100% !important;
 		}
-	}
-
-	section > .container {
-		max-width: none;
-		margin: auto;
-		display: block;
 	}
 
 	.post-wrapper {
@@ -641,7 +635,7 @@ article {
 		}
 
 		code {
-			font-family: 'AFParseGroteskMono-Regular;',sans-serif;
+			font-family: 'Hack', sans-serif;
 			font-style: normal !important;
 			font-size: 0.9em !important;
 			background: rgba(205, 227, 244, 0.8) !important;
