--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -15,7 +15,7 @@
   }
 
   @media(max-width: 600px) {
-    margin: 5px 20px;
+    margin: 5px 0;
     width: 100%;
     width: -moz-available;          /* WebKit-based browsers will ignore this. */
     width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
