small visual tweaks

--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -339,6 +339,7 @@
         display: block;
         text-align: left;
         min-height: 159px;
+        font-weight: 300;
 
         @media(max-width: 600px){
           min-height: 0;
