--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -15,7 +15,7 @@
 		font-weight: 800;
 		font-size: 1.1em;
 		text-shadow: -1px 1px 1px #133e6d;
-		font-family: 'ProductSans-Regular', sans-serif;
+		font-family: 'ProductSans-Medium', sans-serif;
 		text-align: left;
 		text-transform: uppercase;
 		letter-spacing: 2px;
@@ -234,5 +234,6 @@
 		color: white;
 		font-size: 0.85em;
 		font-family: 'soleil', sans-serif;
+		font-weight: 300;
 		padding: 15px 0;
 	}
