--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -11,7 +11,7 @@
 	&:hover {
 		margin-top:-5px;
 		margin-bottom: 45px;
-		box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3);
+		box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3) !important;
 		cursor: pointer;
 	}
 
@@ -29,9 +29,11 @@
 		padding: 10px 10px 15px;
 
 		&:hover {
+			margin-top:-5px;
+			margin-bottom: 15px;
 			cursor: pointer !important;
 			background: #c9ddeb;
-			box-shadow: 0 0 7px rgba(42, 106, 115, 0.59);
+			box-shadow: 0 0 7px rgba(42, 106, 115, 0.59) !important;
 
 			* {
 				cursor: pointer !important;
@@ -413,7 +415,7 @@
 		text-align: left;
 		display: flex;
 		justify-content: space-between;
-		padding: 15px 0 0;
+		padding: 7px 3px 7px;
 		align-items: center;
 		border-top: 1px solid #e7e7e7;
 		transition: all 0.3s ease-out;
