--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -49,6 +49,8 @@
       font-size: 0.85em;
       padding-left: 8px;
       line-height: 1;
+      display: flex;
+      justify-content: flex-start;
 
       * {
         transition: all 0.2s ease-out;
@@ -75,7 +77,7 @@
         margin-right: 8px;
         font-size: 13px;
         @media(max-width: 600px) {
-          min-width: 60px;
+          min-width: 50px;
           margin-right: 2px;
           font-weight: normal;
           font-size: 0.9em;
