more mild tweaks

--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -33,7 +33,7 @@
 			margin-bottom: 15px;
 			cursor: pointer !important;
 			background: #c9ddeb;
-			box-shadow: 0 0 7px rgba(42, 106, 115, 0.59) !important;
+			box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3) !important;
 
 			* {
 				cursor: pointer !important;
@@ -83,9 +83,6 @@
 
 			a {
 				font-family: 'soleil',sans-serif !important;
-			}
-
-			* {
 				display: inline !important;
 			}
 		}
