--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -13,6 +13,7 @@
 
   @media(max-width: 600px) {
     margin: 10px 0 30px;
+    padding-left: 0;
   }
 
   h5 {
@@ -58,6 +59,7 @@
       @media(max-width: 600px) {
         line-height: 1.3;
         margin-bottom: 15px;
+        padding-left: 0;
       }
 
       &:last-child {
