mobile post preview hover

--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -30,17 +30,17 @@
 
 		&:hover {
 			margin-top:-5px;
-			margin-bottom: 20px;
+			margin-bottom: 25px;
 			cursor: pointer !important;
-			background: #c9ddeb;
-			box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3) !important;
+			background: #90d1ff;
+			box-shadow: 0 15px 20px rgba(65, 67, 144, 0.3) !important;
 
 			* {
 				cursor: pointer !important;
 			}
 
 			.post-permalink {
-				border-top: 1px solid #a9b4cd;
+				border-top: 1px solid #92bbcd;
 			}
 		}
 	}
