mobile post preview hover

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -64,6 +64,7 @@
 				font-family: 'soleil', sans-serif;
 				font-size: 0.93em;
 				margin-bottom: 2px;
+				white-space: nowrap;
 
 				* {
 					&:hover {
