--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -834,13 +834,14 @@ nav {
       color: white;
       padding-left: 20px;
       font-size: 1em;
-      font-family: soleil;
+      font-family: soleil, sans-serif;
+      font-weight: 300;
     }
   }
 
   #my-custom-results {
     font-size: 1em;
-    font-family: 'soleil',sans-serif!important;
+    font-family: 'soleil', sans-serif !important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
