--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,13 +2,12 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
-    background: #2d253d;
+    background: #2A1B45;
     color: #a8d1df;
 
     .hljs-attr {
       color: #e471a6 !important;
       font-weight: 700;
-      font-family: 'Hack';
     }
 
     .hljs-string {
