--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -35,6 +35,10 @@
 			border-radius: 2px;
 			transition: all 0.3s ease-out;
 
+			@media(max-width: 800px) {
+				margin-bottom: 10px;
+			}
+
 			&:hover {
 				cursor: pointer;
 				background: @hover-color;
