--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -19,11 +19,20 @@
 	@media(max-width: 950px) {
 		 padding: 15px;
 		 margin-bottom: 20px;
+
+		&:hover {
+			margin-bottom: 25px;
+		}
 	}
 
 	@media(max-width:800px) {
 		margin-bottom: 30px;
+
+		&:hover {
+			margin-bottom: 35px;
+		}
 	}
+
 	@media(max-width:600px) {
 		margin-bottom: 20px;
 		padding: 10px 10px 15px;
@@ -39,8 +48,12 @@
 				cursor: pointer !important;
 			}
 
+			.featured-media img {
+				border: 1px solid #278eae;
+			}
+
 			.post-permalink {
-				border-top: 1px solid #92bbcd;
+				border-top: 1px solid #5bacc7;
 			}
 		}
 	}
