--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -267,6 +267,7 @@
 				font-size: 0.9em;
 				line-height: 1.5;
 				font-family: 'soleil', sans-serif;
+				font-weight: 300;
 			}
 
 
@@ -575,13 +576,6 @@
 			a {
 				margin: 0 0 5px !important;
 				color: #455f6f;
-			}
-
-			single-author img {
-				vertical-align: middle;
-				height: 40px;
-				width: 40px;
-				margin-right: 10px;
 			}
 
 			.recent-single-post a {
