--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -1,4 +1,5 @@
 <article class="post-preview">
+<a href="{{url}}">
   {{#if featured}}
     <div class="featured">
       <i class="far fa-star"></i>
@@ -6,14 +7,12 @@
   {{/if}}
 
   {{#if feature_image}}
-    <a href="{{url}}" class="featured-media">
-      <picture>
+      <picture class="featured-media">
         <source media="(min-width: 1200px)" srcset="{{img_url feature_image size="extralarge"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
         <source media="(min-width: 800px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
         <source media="(min-width: 600px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
         <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
     </picture>
-    </a>
   {{/if}}
 
   <div class="content">
@@ -43,4 +42,5 @@
       <a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
     </div>
   </div>
+</a>
 </article>
