updated github projects

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -57,8 +57,8 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/linkbox" class="github-card" data-github="toddbirchard/linkbox">
-						<h3 class="repo-title">linkbox</h3>
+					<a href="https://github.com/toddbirchard/linkbox-api" class="github-card" data-github="toddbirchard/linkbox-api">
+						<h3 class="repo-title">linkbox-api</h3>
 						<p class="repo-description">Generate a preview for any link by passing a URL parameter.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
@@ -77,9 +77,9 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/hackersandslackers-api" class="github-card" data-github="toddbirchard/hackersandslackers-api">
-						<h3 class="repo-title">hackersandslackers-api</h3>
-						<p class="repo-description">Standalone API to handle account creation, auto-publish to medium, and sitewide link embeds.</p>
+					<a href="https://github.com/toddbirchard/hackers-graphql-server" class="github-card" data-github="toddbirchard/hackers-graphql-server">
+						<h3 class="repo-title">hackers-graphql-server</h3>
+						<p class="repo-description">Standalone API to handle account creation, auto-publish to medium, and site-wide link embeds.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
@@ -97,9 +97,9 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/planetjupyter" class="github-card" data-github="toddbirchard/planetjupyter">
-						<h3 class="repo-title">planetjupyter</h3>
-						<p class="repo-description">Beautify your Jupyter Notebooks.</p>
+					<a href="https://github.com/toddbirchard/serverless-jira-import" class="github-card" data-github="toddbirchard/serverless-jira-import">
+						<h3 class="repo-title">serverless-jira-import</h3>
+						<p class="repo-description">Utilize Google Cloud Functions to import issues from a JIRA instance into a database.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
