refactored partials tree

--- a/default.hbs
+++ b/default.hbs
@@ -27,9 +27,9 @@
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N8VFCPW" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
-	{{> header}}
+	{{> nav/header}}
 	{{{body}}}
-	{{> footer}}
+	{{> nav/footer}}
 	{{> scripts}}
 	{{{block "scripts"}}}
 	{{ghost_foot}}
