--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -9,7 +9,7 @@
 		<div class="meta-info">
 			<span class="post-count"><i class="fal fa-pencil"></i>{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
 			{{#if location}}
-				<span class="loaction"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
+				<span class="location"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
 			{{/if}}
 			{{#if website}}
 				<span class="website"><a href="{{website}}" target="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
