--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -57,7 +57,7 @@
 					<span class="title"></span>
 					<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}</a></span>
 					{{#if location}}
-						<span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
+						<span class="location"><i class="fal fa-home"></i>{{location}}</span>
 					{{/if}}
 					{{#if website}}
 						<span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{website}}</a></span>
