--- a/partials/nav/footer.hbs
+++ b/partials/nav/footer.hbs
@@ -1,10 +1,10 @@
 <!-- start main-footer -->
 <footer class="main-footer">
 	<div class="footer-container">
-		{{> widget-about}}
-		{{> widget-links}}
-		{{> widget-authors}}
-		{{> widget-footertags}}
+		{{> widgets/widget-about}}
+		{{> widgets/widget-links}}
+		{{> widgets/widget-authors}}
+		{{> widgets/widget-footertags}}
 	</div>
 </footer>
 <div class="copyright">
