--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -512,7 +512,7 @@ article {
 	/*   Start of Protip box */
 	.protip {
 		background: rgba(255, 222, 196, 0.42);
-	  	padding: 53px 20px 16px;
+	  padding: 53px 20px 16px;
 		font-size: 0.96em;
 		overflow: hidden;
 		margin: 30px auto;
@@ -521,6 +521,8 @@ article {
 		line-height: 1.7;
 		position: relative;
 		color: #4c3100;
+		font-weight: 300;
+
 		@media(max-width: 600px) {
 			padding: 50px 20px 15px !important;
 			line-height: 1.6;
