--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -141,26 +141,27 @@
 			</div>
 				<div class="projectdropdown">
 					<div class="dropdown">
-				  <ul>
-				    <li class="picker"><span>Select a Project</span><i class="fas fa-caret-down"></i>
-				      <ul class="dropdown-list">
-				        <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
-				        <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
-				        <li class="jupyterproject"><svg style="fill:#fdbc5d;" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Jupyter icon</title><path d="M12.2 18.1c-3.8 0-7.2-1.4-9-3.4.7 1.8 1.9 3.4 3.5 4.5s3.5 1.7 5.5 1.7 3.9-.6 5.5-1.7 2.8-2.7 3.5-4.5c-1.8 2-5.2 3.4-9 3.4zM12.2 4.9c3.8 0 7.2 1.4 9 3.4-.7-1.8-1.9-3.4-3.5-4.5C16 2.6 14.1 2 12.2 2c-2 0-3.9.6-5.5 1.7-1.6 1.2-2.8 2.7-3.5 4.6 1.8-2.1 5.1-3.4 9-3.4z"></path><circle cx="19.2" cy="1.5" r="1.4"></circle><circle cx="5.1" cy="22.1" r="1.8"></circle><circle cx="3.6" cy="3.3" r="1"></circle></svg> Planet Jupyter </li>
-								<li class="apiproject"><i class="fal fa-chart-network"  style="color:#c090c0;"></i> hackersandslackers-api </li>
-				      </ul>
-				    </li>
-						<li class="mobilemenu"><span>Select a Project</span> <i class="fas fa-caret-down"></i>
-				      <ul class="dropdown-list" style="display:none;">
-				        <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
-				        <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
-				        <li class="jupyterproject"><svg style="fill:#fdbc5d;"role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Jupyter icon</title><path d="M12.2 18.1c-3.8 0-7.2-1.4-9-3.4.7 1.8 1.9 3.4 3.5 4.5s3.5 1.7 5.5 1.7 3.9-.6 5.5-1.7 2.8-2.7 3.5-4.5c-1.8 2-5.2 3.4-9 3.4zM12.2 4.9c3.8 0 7.2 1.4 9 3.4-.7-1.8-1.9-3.4-3.5-4.5C16 2.6 14.1 2 12.2 2c-2 0-3.9.6-5.5 1.7-1.6 1.2-2.8 2.7-3.5 4.6 1.8-2.1 5.1-3.4 9-3.4z"></path><circle cx="19.2" cy="1.5" r="1.4"></circle><circle cx="5.1" cy="22.1" r="1.8"></circle><circle cx="3.6" cy="3.3" r="1"></circle></svg> Planet Jupyter </li>
-								<li class="apiproject"><i style="color:#c090c0;" class="fal fa-chart-network"></i> hackersandslackers-api </li>
-				    </li>
-				  </ul>
+                      <ul>
+                          <li class="picker"><span>Select a Project</span><i class="fas fa-caret-down"></i>
+                              <ul class="dropdown-list">
+                                <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
+                                <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
+                                <li class="jupyterproject"><svg style="fill:#fdbc5d;" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Jupyter icon</title><path d="M12.2 18.1c-3.8 0-7.2-1.4-9-3.4.7 1.8 1.9 3.4 3.5 4.5s3.5 1.7 5.5 1.7 3.9-.6 5.5-1.7 2.8-2.7 3.5-4.5c-1.8 2-5.2 3.4-9 3.4zM12.2 4.9c3.8 0 7.2 1.4 9 3.4-.7-1.8-1.9-3.4-3.5-4.5C16 2.6 14.1 2 12.2 2c-2 0-3.9.6-5.5 1.7-1.6 1.2-2.8 2.7-3.5 4.6 1.8-2.1 5.1-3.4 9-3.4z"></path><circle cx="19.2" cy="1.5" r="1.4"></circle><circle cx="5.1" cy="22.1" r="1.8"></circle><circle cx="3.6" cy="3.3" r="1"></circle></svg> Planet Jupyter </li>
+                                <li class="apiproject"><i class="fal fa-chart-network"  style="color:#c090c0;"></i> hackersandslackers-api </li>
+                              </ul>
+                        </li>
+                        <li class="mobilemenu"><span>Select a Project</span> <i class="fas fa-caret-down"></i>
+                            <ul class="dropdown-list">
+                                <li class="stockholmproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
+                                <li class="tokyoproject"><svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
+                                <li class="jupyterproject"><svg style="fill:#fdbc5d;"role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Jupyter icon</title><path d="M12.2 18.1c-3.8 0-7.2-1.4-9-3.4.7 1.8 1.9 3.4 3.5 4.5s3.5 1.7 5.5 1.7 3.9-.6 5.5-1.7 2.8-2.7 3.5-4.5c-1.8 2-5.2 3.4-9 3.4zM12.2 4.9c3.8 0 7.2 1.4 9 3.4-.7-1.8-1.9-3.4-3.5-4.5C16 2.6 14.1 2 12.2 2c-2 0-3.9.6-5.5 1.7-1.6 1.2-2.8 2.7-3.5 4.6 1.8-2.1 5.1-3.4 9-3.4z"></path><circle cx="19.2" cy="1.5" r="1.4"></circle><circle cx="5.1" cy="22.1" r="1.8"></circle><circle cx="3.6" cy="3.3" r="1"></circle></svg> Planet Jupyter </li>
+                                <li class="apiproject"><i style="color:#c090c0;" class="fal fa-chart-network"></i> hackersandslackers-api </li>
+                            </ul>
+                        </li>
+                      </ul>
 				</div>
 			</div>
-			{{> kanban}}
+			{{> projects/kanban}}
 		{{/post}}
 	</div>
 	<!-- end main post area -->
