fixed catastrophic fatal error

--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -1,14 +1,14 @@
 <div class="sidebar" class="{{author.slug}}">
-	{{> widget-github}}
-	{{> widget-medium}}
-	{{> widget-meetup}}
-	{{> widget-authorrss}}
+	{{> widgets/widget-github}}
+	{{> widgets/widget-medium}}
+	{{> widgets/widget-meetup}}
+	{{> widgets/widget-authorrss}}
 	{{#has slug="todd"}}
 	<div class="widget author-twitter">
 		<h4 class="title">Twitter</h4>
 		<iframe src="https://feed.mikle.com/widget/v2/103096/" height="740px" width="100%" class="fw-iframe" frameborder="0"></iframe>
 	</div>
 	{{else}}
-		{{> widget-authortwitter}}
+		{{> widgets/widget-authortwitter}}
 	{{/has}}
 </div>
