removing hljs from global footer

--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -79,9 +79,9 @@
 
 	strong {
 		border: 1px solid #6e89b5 !important;
-    color: #6e89b5 !important;
-    background: rgba(199, 210, 240, 0.19);
-    border-radius: 2px;
+		color: #6e89b5 !important;
+		background: rgba(199, 210, 240, 0.19);
+		border-radius: 2px;
 		transition: all .2s ease-out;
 
 		&:hover {
@@ -115,7 +115,7 @@
 }
 
 /* Next & Prev buttons on post pages */
-
+/*
 .prev-next-wrap {
 	margin: 20px auto 0;
 	padding: 0;
@@ -136,3 +136,4 @@
 		margin: 10px 0;
 	}
 }
+*/
