--- a/post.hbs
+++ b/post.hbs
@@ -70,7 +70,11 @@
 	<!-- end main post area -->
 	{{> posts/postfooter}}
     {{#contentFor "scripts"}}
+        <script src="https://hackers.nyc3.cdn.digitaloceanspaces.com/js/highlight.pack.js"></script>
         <script async src="{{asset "dist/posts.js"}}"></script>
+        <script>
+            hljs.initHighlightingOnLoad();
+        </script>
         {{#has tag="Roundup"}}
             <script src="{{asset "/js/previews.js"}}"></script>
         {{/has}}
