fixed JSON code colors

--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -28,12 +28,11 @@
     position: absolute;
     width: 100%;
     height: auto;
-    mix-blend-mode: color-dodge;
     padding: 6px 25px;
     margin-bottom: 10px;
     top: 0;
     left: 0;
-    font-family: 'ProductSans-Regular';
+    font-family: 'ProductSans-Regular', sans-serif;
     font-size: 1.3em;
     font-style: normal;
     font-variant: normal;
@@ -42,7 +41,9 @@
     text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.6) !important;
     content: "Code Snippet";
     background: rgba(40, 48, 104, 0.6);
+    letter-spacing: 1px;
     mix-blend-mode: color-dodge;
+
     @media(max-width: 600px) {
       width: -webkit-fill-available;
       width: -moz-webkit-fill-available;
