--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,16 +2,18 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
-    background: #2A1B45;
-    color: #a8d1df;
+    background: #1e3742;
+    color: #daf7fd;
 
     .hljs-attr {
-      color: #e471a6 !important;
+      color: #7ac9ff !important;
       font-weight: 700;
     }
 
     .hljs-string {
-      color: #c39dea;
+      font-weight: 400;
+      font-family: 'Hack';
+      color: #a0e4cf;
     }
 
     .hljs-comment,
@@ -40,9 +42,7 @@
 
     .hljs-addition,
     .hljs-attribute,
-    .hljs-meta-string,
-    .hljs-regexp,
-    .hljs-string {
+    .hljs-regexp {
       color: #c39dea !important;
     }
 
@@ -60,7 +60,7 @@
     .hljs-template-variable,
     .hljs-type,
     .hljs-variable {
-      color: #73b97c;
+      color: #c79fd2;
     }
 
     .hljs-bullet,
