--- a/src/less/series/series.less
+++ b/src/less/series/series.less
@@ -3,8 +3,8 @@
 .series-template {
   .postlist {
     @media (max-width: 800px) {
-      width: 100%;
-      margin: 0 0 20px;
+      width: 95%;
+      margin: 20px auto 20px;
       padding: 0;
     }
   }
