--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -29,6 +29,11 @@
     margin-top: 0;
     line-height: 1;
     height: fit-content;
+
+    @media(max-width: 800px) {
+      width: 90%;
+      margin: 0 auto 2px;
+    }
   }
 
   ol {
@@ -38,7 +43,8 @@
     margin-left: 0;
     padding-left: 10px;
     @media(max-width: 600px) {
-      margin: 15px 2px 10px;
+      margin: 15px auto 10px;
+      max-width: 90%;
     }
 
     li {
