--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -4,11 +4,8 @@
 	{{> widgets/widget-meetup}}
 	{{> widgets/widget-authorrss}}
 	{{#has slug="todd"}}
-	<div class="widget author-twitter">
-		<h4 class="title">Twitter</h4>
-		<iframe src="https://feed.mikle.com/widget/v2/103096/" height="740px" width="100%" class="fw-iframe" frameborder="0"></iframe>
-	</div>
+		{{> widgets/wudget-authortwitter}}
 	{{else}}
-		{{> widgets/widget-authortwitter}}
+        {{! Placeholder }}
 	{{/has}}
 </div>
