--- a/partials/widgets/widget-authortwitter.hbs
+++ b/partials/widgets/widget-authortwitter.hbs
@@ -1,12 +1,6 @@
 <!-- start twitter widget -->
-<!--<div class="widget twitter">
-	<div class="twitter">
-		<h3 class="title">Twitter</h3>
-			<a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar" data-tweet-limit="3" data-link-color="#26a2c7" href="{{twitter_url}}"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</div>
-</div>-->
 <div class="widget author-twitter">
   <h4 class="title">Twitter</h4>
-  <iframe src="https://feed.mikle.com/widget/v2/78832/" width="100%" class="fw-iframe" frameborder="0"></iframe>
+    <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78832/"></script>
 </div>
 <!-- end twitter widget -->
