--- a/partials/widgets/widget-twitter.hbs
+++ b/partials/widgets/widget-twitter.hbs
@@ -2,7 +2,7 @@
   <div class="widget" style="order:10">
   	<div class="twitter">
   		<h4 class="title">Twitter</h4>
-      <iframe src="https://feed.mikle.com/widget/v2/96903/" height="814px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+            <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="96903/"></script>
       </div>
   </div>
  <!-- end feedwind code -->
