--- a/partials/widgets/widget-twitter.hbs
+++ b/partials/widgets/widget-twitter.hbs
@@ -1,8 +1,6 @@
  <!-- start feedwind code -->
-  <div class="widget" style="order:10">
-  	<div class="twitter">
-  		<h4 class="title">Twitter</h4>
-            <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="96903/"></script>
-      </div>
+  <div class="widget twitter">
+        <h4 class="title">Twitter</h4>
+        <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="96903/"></script>
   </div>
  <!-- end feedwind code -->
