--- a/partials/widgets/widget-authortwitter.hbs
+++ b/partials/widgets/widget-authortwitter.hbs
@@ -1,5 +1,5 @@
 <!-- start twitter widget -->
-<div class="widget author-twitter">
+<div class="widget twitter">
   <h4 class="title">Twitter</h4>
     <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78832/"></script>
 </div>
