graphql working again for projects

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -166,9 +166,9 @@
 	</div>
 	<!-- end main post area -->
 </section>
-<div class="overlay" style="display:none;"></div>
+<div class="overlay"></div>
 {{#contentFor "scripts"}}
-	<script src="{{asset "dist/projects.js"}}"></script>
+	<script src="{{asset "js/projects.js"}}"></script>
 {{/contentFor}}
 
 <!-- end site's main content area -->
