giving up on authors page for now

--- a/author.hbs
+++ b/author.hbs
@@ -18,6 +18,6 @@
 </section>
 {{#contentFor "scripts"}}
 	<script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
-	<script async src="{{asset "dist/author.js"}}"></script>
+	<script async src="{{asset "js/author.js"}}"></script>
 {{/contentFor}}
 <!-- end sites main content area -->
