--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -7,7 +7,7 @@
 			{{name}}
 		</h3>
 		<div class="meta-info">
-			<span class="post-count"><i class="fal fa-pencil"></i>{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
+			<span class="post-count"><i class="fal fa-pencil"></i>{{#get "posts" limit="all" filter="author:{{slug}}" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
 			{{#if location}}
 				<span class="location"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
 			{{/if}}
