--- a/partials/nav/header.hbs
+++ b/partials/nav/header.hbs
@@ -13,6 +13,7 @@
   	{{/if}}
   </div>
   <div class="navigation">
-  		{{navigation}}
+  		{{> nav/desktop-navigation}}
+        {{> nav/mobile-navigation}}
   </div>
 </nav>
