--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,20 +1,20 @@
 <!-- Start Scripts -->
 <script src="{{asset "js/includes/content-api.min.js"}}"></script>
 <script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
-<!--<script src="{{asset "js/includes/retina.min.js"}}"></script>-->
-<script async src="{{asset "dist/global.js"}}"></script>
+<script src="{{asset "js/includes/retina.min.js"}}"></script>
+<script async src="{{asset "js/global.js"}}"></script>
 <noscript id="deferred-styles">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-Bx4pytHkyTDy3aJKjGkGoHPt3tvv6zlwwjc3iqN7ktaiEMLDPqLSZYts2OjKcBx1" crossorigin="anonymous">
 </noscript>
 <script>
-     var loadDeferredStyles = function() {
-       var addStylesNode = document.getElementById("deferred-styles");
-       var replacement = document.createElement("div");
+       const loadDeferredStyles = function() {
+       const addStylesNode = document.getElementById("deferred-styles");
+       const replacement = document.createElement("div");
        replacement.innerHTML = addStylesNode.textContent;
-       document.body.appendChild(replacement)
+       document.body.appendChild(replacement);
        addStylesNode.parentElement.removeChild(addStylesNode);
      };
-     var raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
+     const raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
          window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
      if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
      else window.addEventListener('load', loadDeferredStyles);
