--- a/post.hbs
+++ b/post.hbs
@@ -71,12 +71,12 @@
 	{{> posts/postfooter}}
     {{#contentFor "scripts"}}
         <script src="https://hackers.nyc3.cdn.digitaloceanspaces.com/js/highlight.pack.js"></script>
-        <script async src="{{asset "dist/posts.js"}}"></script>
+        <script async src="{{asset "js/posts.js"}}"></script>
         <script>
             hljs.initHighlightingOnLoad();
         </script>
         {{#has tag="Roundup"}}
-            <script src="{{asset "/js/previews.js"}}"></script>
+            <script src="{{asset "js/previews.js"}}"></script>
         {{/has}}
     {{/contentFor}}
 {{/post}}
