--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -97,8 +97,8 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/serverless-jira-import" class="github-card" data-github="toddbirchard/serverless-jira-import">
-						<h3 class="repo-title">serverless-jira-import</h3>
+					<a href="https://github.com/toddbirchard/jira-database-etl" class="github-card" data-github="toddbirchard/jira-database-etl">
+						<h3 class="repo-title">jira-database-etl</h3>
 						<p class="repo-description">Utilize Google Cloud Functions to import issues from a JIRA instance into a database.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
