removed references to assets/dist

--- a/custom-transactional.hbs
+++ b/custom-transactional.hbs
@@ -44,7 +44,7 @@
 	</section>
 	{{/post}}
 	{{#contentFor "scripts"}}
-		<script async src="{{asset "dist/transactional.js"}}"></script>
+		<script async src="{{asset "js/transactional.js"}}"></script>
 	{{/contentFor}}
 </body>
 </html>
