--- a/series.hbs
+++ b/series.hbs
@@ -27,6 +27,6 @@
 	</div>
 </section>
 {{#contentFor "scripts"}}
-	<script async src="{{asset "dist/series.js"}}"></script>
+	<script async src="{{asset "js/series.js"}}"></script>
 {{/contentFor}}
 <!-- end site's main content area -->
