--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
-<script src="{{asset "/dist/apply.js"}}"></script>
+<script src="{{asset "js/apply.js"}}"></script>
 <section class="content-wrap page-apply">
   <div class="container">
     {{#post}}
