--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -212,11 +212,11 @@
   }
 
   .dataengineering {
-    background: #c4d8ff;
-    color: #36408c !important;
+    background: #d7dde9;
+    color: #525f86 !important;
 
     * {
-      color: #36408c !important;
+      color: #525f86 !important;
     }
   }
 
