added data engineering tag

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -23,7 +23,7 @@ nav {
       top: 0;
       bottom: 0;
       margin: auto;
-      width: fit-content;
+      width: 195px;
       transition: all 0.3s ease-out;
 
       &:hover {
@@ -1140,6 +1140,7 @@ nav {
       font-size: .9em;
       padding: 0;
       height: 45px;
+      background: none;
     }
     
     .dropdown-content {
